@@ -66,7 +66,7 @@ class ApiQueryLogEvents extends ApiQueryBase {
 		));
 		
 		// FIXME: Fake out log_id for now until the column is live on Wikimedia
-		// $this->addFieldsIf('log_id', $this->fld_ids);
+		$this->addFieldsIf('log_id', $this->fld_ids);
 		$this->addFieldsIf('page_id', $this->fld_ids);
 		$this->addFieldsIf('log_user', $this->fld_user);
 		$this->addFieldsIf('user_name', $this->fld_user);
@@ -127,8 +127,8 @@ class ApiQueryLogEvents extends ApiQueryBase {
 
 		if ($this->fld_ids) {
 			// FIXME: Fake out log_id for now until the column is live on Wikimedia
-			// $vals['logid'] = intval($row->log_id);
-			$vals['logid'] = 0;
+			$vals['logid'] = intval($row->log_id);
+			//$vals['logid'] = 0;
 			$vals['pageid'] = intval($row->page_id);
 		}
 		
